kubernetes/frontendDeployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-frontend
  template:
    metadata:
      labels:
        app: dashboard-frontend
    spec:
      containers:
      - name: dashboard-frontend
        image: us-docker.pkg.dev/flowing-maxim-440415-v9/dashboard/frontend:4785585
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
