kubernetes/backendService.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-backend-service
spec:
  type: NodePort
  selector:
    app: dashboard-backend
  ports:
  - port: 8000
    targetPort: 8000
