kubernetes/frontendService.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-frontend-service
spec:
  type: NodePort
  selector:
    app: dashboard-frontend
  ports:
  - port: 3000
    targetPort: 3000
